adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Olá,Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nostrum voluptas tempore quaerat consequatur voluptatibus aliquid, repellat saepe asperiores iste quod quibusdam cum iusto incidunt. Facere iusto incidunt eius recusandae!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nostrum voluptas tempore quaerat consequatur voluptatibus aliquid, repellat saepe asperiores iste quod quibusdam cum iusto incidunt. Facere iusto incidunt eius recusandae!</p><br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum velit natus alias earum maxime voluptate ducimus sapiente dicta? Eum dolore ab dolorum sunt ipsa fugiat velit veniam beatae repellat aliquam.</p>
     
 </body>
 </html>
